# IDASkins

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Config.hpp  Core.cpp  Core.hpp  IdaFontConfig.cpp  IdaFontConfig.hpp  LICENSE  README.md  Settings.cpp  Settings.hpp  ThemeManifest.cpp  ThemeManifest.hpp  ThemeSelector.cpp  Utils.cpp  Utils.hpp  build_binary_dist.py  changelog.txt  idaskins.cpp  idaskins.pro  idaskins_p64.pro  make_vs_proj.py  make_vs_proj_p64.py  stylesheet.css
cmake/: IDA.cmake
plugins/: idaskins.py
plugins/idaskins/: __init__.py  clrapplier.py  idafontconfig.py  objectinspector.py  plugin.py  settings.py  thememanifest.py  themeselector.py
plugins/idaskins/themes/adwaita-dark/: adwaita-dark.clr  manifest.json  manifest.xml  stylesheet.qss
plugins/idaskins/themes/ida-default/: ida-default.clr  manifest.json  stylesheet.qss
plugins/idaskins/themes/idadark-unis/: manifest.json  stylesheet.qss
plugins/idaskins/themes/idadark72-unis/: colors.clr  manifest.json  stylesheet.qss
plugins/idaskins/themes/idaskins-dark/: ida-consonance.clr  manifest.json  manifest.xml  stylesheet.qss
plugins/idaskins/themes/vscode-dark/: manifest.json  stylesheet.less  stylesheet.qss  vscode-dark.clr
plugins/idaskins/ui/: ThemeSelector.ui
skin/adwaita-dark/: stylesheet.qss
skin/default/: manifest.xml  stylesheet.qss
skin/ida-default/: manifest.xml
skin/idadark-unis/: manifest.xml  myColors.clr
skin/idaskins-dark/: manifest.xml  stylesheet.qss
src/: Config.hpp  Core.cpp  Core.hpp  IdaFontConfig.cpp  IdaFontConfig.hpp  ObjectInspector.cpp  ObjectInspector.hpp  PluginConfig.hpp  Settings.cpp  Settings.hpp  ThemeManifest.cpp  ThemeManifest.hpp  ThemeSelector.cpp  ThemeSelector.hpp  Utils.cpp  Utils.hpp  idaskins.cpp
ui/: ObjectInspector.ui  ThemeEditorDialog.ui  ThemeSelector.ui
